--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Eddy/Downloads/LatestEngine.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Engine"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
